--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
 <body vocab="http://schema.org/">
   <div typeof="Person">
-    <h1 property="name">elf Pavlik</h1>
+    <h1 property="name">Joachim Lohkamp</h1>
     <img property="image" src="http://www.gravatar.com/avatar/00000000000000000000000000000000" />
-    <p property="description">i like you :)</p>
+    <p property="description"> :)</p>
     <h2>social profiles</h2>
     <ul>
-      <li><a property="sameAs" href="https://github.com/elf-pavlik">github</a></li>
-      <li><a property="sameAs" href="https://twitter.com/elfpavlik">twitter</a></li>
-      <li><a property="sameAs" href="https://plus.google.com/+elfPavlik">google+</a></li>
-      <li><a property="sameAs" href="https://facebook.com/elf.pavlik">facebook</a></li>
+      <li><a property="sameAs" href="https://github.com/JOLOCOM">github</a></li>
+      <li><a property="sameAs" href="https://twitter.com/JockelLohkamp">twitter</a></li>
+      <li><a property="sameAs" href="https://plus.google.com/u/0/+JoachimLohkamp">google+</a></li>
+      <li><a property="sameAs" href="https://www.facebook.com/joachim.lohkamp">facebook</a></li>
     </ul>
     <h2>friends</h2>
     <ul>
+      <li><a property="knows" href="https://github.com/elf-pavlik">elf pavlik</a></li>
       <li><a property="knows" href="http://samsemilio.github.io">Samuel Andert</a></li>
       <li><a property="knows" href="http://auli.haldjas.org/">Auli Kütt</a></li>
       <li><a property="knows" href="http://profile.daha.co.uk">Daniel Harris</a></li>
