--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body vocab="http://schema.org/">
   <div typeof="Person">
     <h1 property="name">Joachim Lohkamp</h1>
-    <img property="image" src="http://www.gravatar.com/avatar/00000000000000000000000000000000" />
+    <img property="image" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-prn2/t1.0-9/1544572_670035693048842_823918941_n.jpg" />
     <p property="description"> :)</p>
     <h2>social profiles</h2>
     <ul>
