--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <p property="description"> :)</p>
     <h2>social profiles</h2>
     <ul>
+      <li><a property="sameAs" href="http://jolocom.com">JOLOCOM</a></li>
       <li><a property="sameAs" href="https://github.com/JOLOCOM">github</a></li>
       <li><a property="sameAs" href="https://twitter.com/JockelLohkamp">twitter</a></li>
       <li><a property="sameAs" href="https://plus.google.com/u/0/+JoachimLohkamp">google+</a></li>
@@ -13,7 +14,7 @@
     </ul>
     <h2>friends</h2>
     <ul>
-      <li><a property="knows" href="https://github.com/elf-pavlik">elf pavlik</a></li>
+      <li><a property="knows" href="http://elf-pavlik.wwelves.org">elf pavlik</a></li>
       <li><a property="knows" href="http://samsemilio.github.io">Samuel Andert</a></li>
       <li><a property="knows" href="http://auli.haldjas.org/">Auli Kütt</a></li>
       <li><a property="knows" href="http://profile.daha.co.uk">Daniel Harris</a></li>
