--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
       <li><a property="knows" href="http://y.chn.io/ ">Jon Richter</a></li>
       <li><a property="knows" href="http://box.projectdanube.org/">Markus Sabadello</a></li>
     </ul>
+    
+      <h2>wishlist</h2>
+  <h3>seeks</h3>
+  <ul>
+    <li rel="seeks">
+    <div typeof="Demand" about="/requests/1">
+      <div rel="itemOffered">
+            <span property="name">iPhone or fairphone</span>
+      </div>
+    </div>
+    </li>
+    <li rel="seeks">
+    <div typeof="Demand" about="/requests/2">
+      <div rel="itemOffered">
+            <span property="name">Massage</span>
+      </div>
+    </div>
+    </li>
+  </ul>
+  <h3>offers</h3>
+  <ul>
+    <li rel="makesOffer">
+    <div typeof="Offer" about="/offers/a">
+      <div rel="itemOffered">
+        <p property="name">new Nike running shoes - EU size 46</p>
+      </div>
+    </div>
+    </li>
+  </ul>
   </div>
 </body>
 </html>
