added "rel "me"

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <ul>
       <li><a property="sameAs" href="http://jolocom.com">JOLOCOM</a></li>
       <li><a property="sameAs" href="https://github.com/JOLOCOM">github</a></li>
-      <li><a property="sameAs" href="https://twitter.com/JockelLohkamp">twitter</a></li>
-      <li><a property="sameAs" href="https://plus.google.com/u/0/+JoachimLohkamp">google+</a></li>
-      <li><a property="sameAs" href="https://www.facebook.com/joachim.lohkamp">facebook</a></li>
+      <li><a property="sameAs" href="https://twitter.com/JockelLohkamp" rel="me">twitter</a></li>
+      <li><a property="sameAs" href="https://plus.google.com/u/0/+JoachimLohkamp" rel="me">google+</a></li>
+      <li><a property="sameAs" href="https://www.facebook.com/joachim.lohkamp" rel="me">facebook</a></li>
     </ul>
     <h2>friends</h2>
     <ul>
